# slab

./: .gitignore  .pre-commit-config.yaml  Contini.py  LICENSE  README.md  TODO.md  TODO.py  TODO.txt  main.py  pyproject.toml  requirements.txt  update_issues.py
modules/: __init__.py
modules/method_class/: Contini_Class.py  base_class.py
modules/other/: utils.py
modules/reflect_transmit/: reflect_transmit.py
src/modules/: __init__.py
src/modules/other/: utils.py
src/torch_modules/: __init__.py
src/torch_modules/other/: __init__.py  training.py
src/torch_modules/reflect_transmit/: reflect_transmit.py
src/torch_modules/t_method_classes/: t_Contini_Class.py
test_data/: all_raw_data_combined.xlsx
tests/: test.py  test_torch.py
torch_modules/: __init__.py
torch_modules/other/: utils.py
torch_modules/reflect_transmit/: reflect_transmit.py
torch_modules/t_method_classes/: Contini_Class.py  __init__.py  base_class.py  t_Contini_Class.py
